testdata/invalid/compute_column_invalid_02.lisp
;;error:3:23-24:unknown type
(defcolumns (X :i16))
(defcomputedcolumn (Y Z) (+ X 1))